added webapp build mode, webapp reloading support, Spring-ApplicationContext reloading support, Tomcat startup-configuration